2006-07-25  Jean-Louis Martineau <martineau@zmanda.com>
	* tape-src/output-tape.c (tape_tape_open): mt is declared inside #ifdef.

2006-07-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Fix quoting.

2006-07-25  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/clientconf.c: client_getconf* validate the type.
	* common-src/util.c (get_conftype_*): New function.
	* common-src/util.h (get_conftype_*): Prototype.
	* server-src/conffile.c: getconf* validate the type.
	* server-src/conffile.h: Use get_conftype_* function.

2006-07-25  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/clientconf.c: New AMANDATES client config option.
	* client-src/clientconf.h: New AMANDATES client config option.
	* client-src/amandates.c: Use AMANDATES.
	* client-src/amandates.h: Use AMANDATES.
	* client-src/selfcheck.c: Use AMANDATES.
	* client-src/sendbackup-gnutar.c: Use AMANDATES.
	* client-src/sendsize.c:: Use AMANDATES.
	* common-src/util.h : New CONF_AMANDATES.
	* man/xml-source/amanda-client.conf.5.xml: Document it.

2006-07-25  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/clientconf.c: New GNUTAR_LIST_DIR client config option.
	* client-src/clientconf.h: New GNUTAR_LIST_DIR client config option.
	* client-src/selfcheck.c: Use GNUTAR_LIST_DIR.
	* client-src/sendbackup-gnutar.c: Use GNUTAR_LIST_DIR.
	* client-src/sendsize.c: Use GNUTAR_LIST_DIR.
	* common-src/util.h: New CONF_GNUTAR_LIST_DIR.
	* man/xml-source/amanda-client.conf.5.xml: Document it.

2006-07-25  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/calcsize.c, client-src/killpgrp.c,
	  client-src/rundump.c, client-src/runtar.c,
	  client-src/selfcheck.c, client-src/sendbackup.c,
	  client-src/sendsize.c, common-src/amanda.h,
	  common-src/debug.c, oldrecover-src/amrecover.c,
	  recover-src/amrecover.c, restore-src/amfetchdump.c,
	  restore-src/amidxtaped.c, server-src/amadmin.c,
	  server-src/amcheck.c, server-src/amcleanupdisk.c,