@@ -25,7 +25,7 @@
  *			   University of Maryland at College Park
  */
 /* 
- * $Id: selfcheck.c,v 1.92 2006/07/25 18:35:21 martinea Exp $
+ * $Id: selfcheck.c,v 1.93 2006/07/25 18:53:41 martinea Exp $
  *
  * do self-check and send back any error messages
  */
@@ -500,7 +500,7 @@ check_disk(
     int		level,
     char *	optstr)
 {
-    char *device = "nodevice";
+    char *device = stralloc("nodevice");
     char *err = NULL;
     char *user_and_password = NULL;
     char *domain = NULL;
